--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <section class="resume">
     <h2>My Resume</h2>
-    <a href="https://drive.google.com/file/d/1d6cr2WLTgybcfmmLDO5CugBFoy76zqWZ/view" target="_blank">
+    <a href="https://drive.google.com/file/d/1bDKxc3HrMFdx7ui3uzNm9o93LgNylUEB/view?usp=sharing" target="_blank">
       <img src="Resume - Olivia Yip.pdf" alt="Olivia Yip's Resume" width="700">
     </a>
   </section>
