--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
   </section>
 
   <footer>
+    <p>Let's Connect!</p>
+    <p>Email: olivia.yip7@gmail.com<br>Instagram: @oliviayiip<br>LinkedIn: Olivia Yip</p>
     &copy; 2024 Olivia Yip. All Rights Reserved.
   </footer>
 </body>
