--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
       border: 2px solid #ece3dd;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     }
+    
+    .resume h2 {
+      font-size: 2rem;
+      color: #000000;
+      margin-bottom: 20px;
+    }
 
     footer {
       background-color: #a9a496;
