--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <footer>
     <p>Let's Connect!</p>
-    <p>Email: olivia.yip7@gmail.com<br>Instagram: @oliviayiip<br>LinkedIn: Olivia Yip</p>
+    <p>Email: o2yip@uwaterloo.ca<br>Instagram: @oliviayiip<br>LinkedIn: Olivia Yip</p>
     &copy; 2024 Olivia Yip. All Rights Reserved.
   </footer>
 </body>
