--- a/index.html
+++ b/index.html
@@ -123,11 +123,14 @@
     </a>
   </section>
 
-  <footer>
-    <p>Let's Connect!</p>
-    <p>Email: o2yip@uwaterloo.ca<br>Instagram: @oliviayiip<br>LinkedIn: Olivia Yip</p>
-    &copy; 2024 Olivia Yip. All Rights Reserved.
+<footer>
+  <p>Let's Connect!</p>
+  <p>
+    Email: <a href="mailto:o2yip@uwaterloo.ca" style="color: white; text-decoration: none;">o2yip@uwaterloo.ca</a><br>
+    Instagram: <a href="https://www.instagram.com/oliviayiip" target="_blank" style="color: white; text-decoration: none;">@oliviayiip</a><br>
+    LinkedIn: <a href="https://www.linkedin.com/in/oliviayiip" target="_blank" style="color: white; text-decoration: none;">Olivia Yip</a>
+  </p>
+  &copy; 2024 Olivia Yip. All Rights Reserved.
   </footer>
 </body>
 </html>
-
